vlib/v/parser/tests/closure_undefined_var.vv
fn my_fn() {
	f := fn [dont_exist] () {
		print(dont_exist)
	}
	f()
}
